# ae

./: .gitignore  LICENSE  README.md  meson.build  mk
R/: collapse_short_branches.R  rotate.R  set_min_branch_lengths.R
cc/ad/: algorithm.hh  color-gradient.cc  color-gradient.hh  color-hsv.cc  color-hsv.hh  color-modifier.cc  color-modifier.hh  color-names.icc  color.cc  color.hh  counter.hh  data-formatter.hh  enumerate.hh  flat-map.hh  flat-set.hh  format-double.hh  point-style.hh  rjson-forward.hh  rjson-v2.cc  rjson-v2.hh  rjson-v3-helper.cc  rjson-v3-helper.hh  rjson-v3.cc  rjson-v3.hh  sfinae.hh  statistics.hh  text-style.hh  to-json.hh
cc/chart/v2/: acd1-import.cc  acd1-import.hh  ace-export.cc  ace-export.hh  ace-import.cc  ace-import.hh  ace.hh  alglib.cc  alglib.hh  annotations.hh  avidity-adjusts.hh  blobs.cc  blobs.hh  chart-modify.cc  chart-modify.hh  chart-relax.cc  chart.cc  chart.hh  column-bases.cc  column-bases.hh  command-helper.hh  common.cc  common.hh  disconnected-points-handler.hh  factory-export.cc  factory-export.hh  factory-import.cc  factory-import.hh  grid-test.cc  grid-test.hh  index-iterator.hh  indexes.hh  iterator.hh  lab.hh  layout.cc  layout.hh  lispmds-encode.cc  lispmds-encode.hh  lispmds-export.cc  lispmds-export.hh  (+32 more)
cc/chart/v3/: alglib.cc  alglib.hh  annotations.hh  antigens.cc  antigens.hh  area.hh  avidity-adjusts.hh  avidity-test.cc  avidity-test.hh  chart-export.cc  chart-import.cc  chart-seqdb.cc  chart-seqdb.hh  chart.cc  chart.hh  column-bases.hh  common.cc  common.hh  disconnected-points-handler.hh  grid-test.cc  grid-test.hh  index.hh  info.cc  info.hh  label-style.hh  layout.cc  layout.hh  legacy-plot-spec.hh  merge.cc  merge.hh  number-of-dimensions.hh  optimization-precision.hh  optimize-options.hh  optimize.cc  optimize.hh  point-coordinates.hh  point-shape.hh  point-style.hh  procrustes.cc  procrustes.hh  (+20 more)
cc/core/: py.cc
cc/draw/v1/: line.hh  point-coordinates.hh  size-scale.hh  size.hh  transformation.hh
cc/draw/v2/: color.hh  label-style.hh  line.hh  rotation.hh  viewport.hh
cc/ext/: brotli.hh  bzip2.hh  compare.hh  compressed.hh  compressor.hh  date.cc  date.hh  filesystem.hh  fmt.hh  from_chars.hh  gzip.hh  hash.hh  lexy.hh  omp.hh  pybind11.hh  range-v3.hh  simdjson.hh  string.hh  xlnt.hh  xz.hh
cc/locdb/: locdb.cc  locdb.hh
cc/locdb/v3/: locdb.cc  locdb.hh
cc/py/: chart-v2.cc  chart-v3-antigens.cc  chart-v3-plot-spec.cc  chart-v3-tests.cc  chart-v3.cc  chart-v3.hh  dynamic.hh  locdb-v3.cc  module.cc  module.hh  sequences.cc  tree.cc  utils.cc  virus.cc  whocc.cc
cc/sequences/: align.cc  align.hh  clades.cc  clades.hh  deletions.cc  deletions.hh  detect.hh  fasta.cc  fasta.hh  hamming-distance.hh  issues.hh  lineage.hh  master.cc  master.hh  pos.hh  raw-sequence.hh  seqdb-export.cc  seqdb-selected.cc  seqdb-selected.hh  seqdb.cc  seqdb.hh  sequence.hh  translate.cc  translate.hh
cc/test/: basic.cc  chart-v3-test.cc  test-date.cc  test-named-vector.cc  test-passage.cc  test-pos.cc  test-virus-name.cc  virus-name.cc
cc/tree/: aa-transitions.cc  aa-transitions.hh  export.cc  export.hh  newick.cc  newick.hh  raxml-ancestral-state.cc  text-export.cc  text-export.hh  tree-iterator.cc  tree-iterator.hh  tree.cc  tree.hh
cc/utils/: collection-json.cc  collection-json.hh  collection.cc  collection.hh  concepts.hh  counter.hh  debug.hh  enum.hh  file.cc  file.hh  float.hh  hash.hh  log.cc  log.hh  messages.cc  messages.hh  named-type.hh  named-vector.hh  overload.hh  regex.hh  statistics.hh  string-hash.hh  string.hh  timeit.hh
cc/virus/: name-parse.cc  name-parse.hh  name.hh  passage-parse.cc  passage-parse.hh  passage.cc  passage.hh  reassortant.cc  reassortant.hh  type-subtype.hh  virus.hh
cc/whocc/xlsx/: csv-parser.cc  csv-parser.hh  error.hh  sheet-extractor.cc  sheet-extractor.hh  sheet.cc  sheet.hh  xlnt.hh  xlsx.hh
doc/: ace-format.js  ace-format.json  ace-format.org  amino-acids.org  gisaid-seqdb-tree.org  lispmds-format.lisp  merge-types.org  nextclade.org  org-table-format.org  phylogenetic-tree-v3.format.json  seqdb4-format.json
proj/nextclade/: get-clade-data
proj/weekly-tree/: README.org  bvic.tal  byam.tal  export  export~  garli  garli-h3  garli-memvar  h1-include.txt  h1.tal  h3.tal  init  init-h3  make-cmaple  pdf  raxml  raxml-asr  submit  submit-memvar  submit-new  update-tree
py/: .gitignore
py/ae/chart/: __init__.py  info.py  merge.py  text.py
py/ae/semantic/: __init__.py  clade.py  continent.py  find.py  front_style.py  name_generator.py  name_passage.py  new_compared_to.py  older_than.py  pale.py  passage.py  reference.py  select_mark.py  serology.py  serum_circle.py  serum_coverage.py  style.py  time_series.py  vaccine.py
py/ae/sequences/: utils.py
py/ae/sequences/source/: context.py  fasta.py  messages.py  ncbi.py  parse.py
py/ae/utils/: datetime.py  directory_module.py  format_table.py  json.py  kateri.py  load_module.py  num_digits.py  open_file.py  org.py  time_series.py  timeit.py  traceback.py
py/ae/virus/: __init__.py  name_format.py  subtype_prefix.py
py/ae/whocc/: ace.py  data_fix.py  table_dir.py  torg.py
py/locdb_v2/: __init__.py  geonames.py  read.py  update.py  utilities.py
subprojects/: .gitignore  README.org  alglib.wrap  fmt.wrap  lexy.wrap  pybind11.wrap  range_v3.wrap  simdjson.wrap  xlnt.wrap  xxhash.wrap
subprojects/packagefiles/alglib/: meson.build
subprojects/packagefiles/fmt/: meson.build
subprojects/packagefiles/pybind11/: meson.build
subprojects/packagefiles/range_v3/: meson.build
subprojects/packagefiles/simdjson/: meson.build
subprojects/packagefiles/xlnt/: meson.build
test/: chart1.ace
