project('xlnt_all', 'c', 'cpp')
libstudxml_dir = include_directories('third-party/libstudxml', '.')
libstudxml_sys = include_directories(is_system : true)
libstudxml_inc = [libstudxml_dir, libstudxml_sys]
libstudxml_src = files(
  'third-party/libstudxml/libstudxml/parser.cxx',
  'third-party/libstudxml/libstudxml/qname.cxx',
  'third-party/libstudxml/libstudxml/serializer.cxx',
  'third-party/libstudxml/libstudxml/value-traits.cxx',
  'third-party/libstudxml/libstudxml/details/genx/char-props.c',
  'third-party/libstudxml/libstudxml/details/genx/genx.c',
  'third-party/libstudxml/libstudxml/details/expat/xmlparse.c',
  'third-party/libstudxml/libstudxml/details/expat/xmlrole.c',
  'third-party/libstudxml/libstudxml/details/expat/xmltok.c',
  'third-party/libstudxml/libstudxml/content.hxx',
  'third-party/libstudxml/libstudxml/exception.hxx',
  'third-party/libstudxml/libstudxml/forward.hxx',
  'third-party/libstudxml/libstudxml/details/genx/genx.h',
  'third-party/libstudxml/libstudxml/details/expat/ascii.h',
  'third-party/libstudxml/libstudxml/details/expat/asciitab.h',
  'third-party/libstudxml/libstudxml/details/expat/config.h',
  'third-party/libstudxml/libstudxml/details/expat/expat_external.h',
  'third-party/libstudxml/libstudxml/details/expat/expat.h',
  'third-party/libstudxml/libstudxml/details/expat/iasciitab.h',
  'third-party/libstudxml/libstudxml/details/expat/internal.h',
  'third-party/libstudxml/libstudxml/details/expat/latin1tab.h',
  'third-party/libstudxml/libstudxml/details/expat/nametab.h',
  'third-party/libstudxml/libstudxml/details/expat/utf8tab.h',
  'third-party/libstudxml/libstudxml/details/expat/xmlrole.h',
  'third-party/libstudxml/libstudxml/details/expat/xmltok_impl.h',
  'third-party/libstudxml/libstudxml/details/expat/xmltok.h'
)
libstudxml = static_library(
  'libstudxml',
  libstudxml_src,
  build_by_default : false,
  link_args : [],
  link_with : [],
  include_directories : libstudxml_inc,
  install : false,
  override_options : ['cpp_std=gnu++11'],
  objects : [],
  cpp_args : ['-DLIBSTUDXML_STATIC_LIB=1', '-w'],
  c_args : ['-DLIBSTUDXML_STATIC_LIB=1', '-w'],
  pic : true
)
libstudxml_dep = declare_dependency(
  link_args : [],
  link_with : libstudxml,
  compile_args : [],
  include_directories : libstudxml_inc
)
xlnt_dir = include_directories(
  'include',
  'source',
  'third-party/libstudxml',
  'third-party/miniz',
  'third-party/utfcpp',
  '.'
)
xlnt_sys = include_directories(is_system : true)
xlnt_inc = [xlnt_dir, xlnt_sys]
xlnt_src = files(
  'source/cell/cell.cpp',
  'source/cell/cell_reference.cpp',
  'source/cell/comment.cpp',
  'source/cell/hyperlink.cpp',
  'source/cell/index_types.cpp',
  'source/cell/phonetic_run.cpp',
  'source/cell/rich_text.cpp',
  'source/cell/rich_text_run.cpp',
  'source/drawing/spreadsheet_drawing.cpp',
  'source/packaging/ext_list.cpp',
  'source/packaging/manifest.cpp',
  'source/packaging/relationship.cpp',
  'source/packaging/uri.cpp',
  'source/styles/alignment.cpp',
  'source/styles/border.cpp',
  'source/styles/color.cpp',
  'source/styles/conditional_format.cpp',
  'source/styles/fill.cpp',
  'source/styles/font.cpp',
  'source/styles/format.cpp',
  'source/styles/number_format.cpp',
  'source/styles/protection.cpp',
  'source/styles/style.cpp',
  'source/utils/date.cpp',
  'source/utils/datetime.cpp',
  'source/utils/exceptions.cpp',
  'source/utils/path.cpp',
  'source/utils/time.cpp',
  'source/utils/timedelta.cpp',
  'source/utils/variant.cpp',
  'source/workbook/named_range.cpp',
  'source/workbook/streaming_workbook_reader.cpp',
  'source/workbook/streaming_workbook_writer.cpp',
  'source/workbook/workbook.cpp',
  'source/workbook/worksheet_iterator.cpp',
  'source/worksheet/cell_iterator.cpp',
  'source/worksheet/cell_vector.cpp',
  'source/worksheet/header_footer.cpp',
  'source/worksheet/page_margins.cpp',
  'source/worksheet/page_setup.cpp',
  'source/worksheet/phonetic_pr.cpp',
  'source/worksheet/range.cpp',
  'source/worksheet/range_iterator.cpp',
  'source/worksheet/range_reference.cpp',
  'source/worksheet/sheet_protection.cpp',
  'source/worksheet/worksheet.cpp',
  'source/detail/constants.cpp',
  'source/detail/unicode.cpp',
  'source/detail/cryptography/aes.cpp',
  'source/detail/cryptography/base64.cpp',
  'source/detail/cryptography/compound_document.cpp',
  'source/detail/cryptography/encryption_info.cpp',
  'source/detail/cryptography/hash.cpp',
  'source/detail/cryptography/sha.cpp',
  'source/detail/cryptography/xlsx_crypto_consumer.cpp',
  'source/detail/cryptography/xlsx_crypto_producer.cpp',
  'source/detail/header_footer/header_footer_code.cpp',
  'source/detail/implementations/cell_impl.cpp',
  'source/detail/number_format/number_formatter.cpp',
  'source/detail/serialization/custom_value_traits.cpp',
  'source/detail/serialization/open_stream.cpp',
  'source/detail/serialization/vector_streambuf.cpp',
  'source/detail/serialization/xlsx_consumer.cpp',
  'source/detail/serialization/xlsx_producer.cpp',
  'source/detail/cryptography/sha1.c',
  'source/detail/cryptography/sha512.c',
  'third-party/miniz/miniz.c',
  'source/detail/serialization/zstream.cpp',
  'include/xlnt/xlnt.hpp',
  'include/xlnt/xlnt_config.hpp',
  'include/xlnt/cell/cell.hpp',
  'include/xlnt/cell/cell_reference.hpp',
  'include/xlnt/cell/cell_type.hpp',
  'include/xlnt/cell/comment.hpp',
  'include/xlnt/cell/hyperlink.hpp',
  'include/xlnt/cell/index_types.hpp',
  'include/xlnt/cell/phonetic_run.hpp',
  'include/xlnt/cell/rich_text.hpp',
  'include/xlnt/cell/rich_text_run.hpp',
  'include/xlnt/drawing/spreadsheet_drawing.hpp',
  'include/xlnt/packaging/ext_list.hpp',
  'include/xlnt/packaging/manifest.hpp',
  'include/xlnt/packaging/relationship.hpp',
  'include/xlnt/packaging/uri.hpp',
  'include/xlnt/styles/alignment.hpp',
  'include/xlnt/styles/border.hpp',
  'include/xlnt/styles/color.hpp',
  'include/xlnt/styles/conditional_format.hpp',
  'include/xlnt/styles/fill.hpp',
  'include/xlnt/styles/font.hpp',
  'include/xlnt/styles/format.hpp',
  'include/xlnt/styles/number_format.hpp',
  'include/xlnt/styles/protection.hpp',
  'include/xlnt/styles/style.hpp',
  'include/xlnt/utils/calendar.hpp',
  'include/xlnt/utils/date.hpp',
  'include/xlnt/utils/datetime.hpp',
  'include/xlnt/utils/exceptions.hpp',
  'include/xlnt/utils/numeric.hpp',
  'include/xlnt/utils/optional.hpp',
  'include/xlnt/utils/path.hpp',
  'include/xlnt/utils/scoped_enum_hash.hpp',
  'include/xlnt/utils/time.hpp',
  'include/xlnt/utils/timedelta.hpp',
  'include/xlnt/utils/variant.hpp',
  'include/xlnt/workbook/calculation_properties.hpp',
  'include/xlnt/workbook/document_security.hpp',
  'include/xlnt/workbook/external_book.hpp',
  'include/xlnt/workbook/metadata_property.hpp',
  'include/xlnt/workbook/named_range.hpp',
  'include/xlnt/workbook/streaming_workbook_reader.hpp',
  'include/xlnt/workbook/streaming_workbook_writer.hpp',
  'include/xlnt/workbook/theme.hpp',
  'include/xlnt/workbook/workbook.hpp',
  'include/xlnt/workbook/workbook_view.hpp',
  'include/xlnt/workbook/worksheet_iterator.hpp',
  'include/xlnt/worksheet/cell_iterator.hpp',
  'include/xlnt/worksheet/cell_vector.hpp',
  'include/xlnt/worksheet/column_properties.hpp',
  'include/xlnt/worksheet/header_footer.hpp',
  'include/xlnt/worksheet/major_order.hpp',
  'include/xlnt/worksheet/page_margins.hpp',
  'include/xlnt/worksheet/page_setup.hpp',
  'include/xlnt/worksheet/pane.hpp',
  'include/xlnt/worksheet/phonetic_pr.hpp',
  'include/xlnt/worksheet/print_options.hpp',
  'include/xlnt/worksheet/range.hpp',
  'include/xlnt/worksheet/range_iterator.hpp',
  'include/xlnt/worksheet/range_reference.hpp',
  'include/xlnt/worksheet/row_properties.hpp',
  'include/xlnt/worksheet/selection.hpp',
  'include/xlnt/worksheet/sheet_format_properties.hpp',
  'include/xlnt/worksheet/sheet_pr.hpp',
  'include/xlnt/worksheet/sheet_protection.hpp',
  'include/xlnt/worksheet/sheet_view.hpp',
  'include/xlnt/worksheet/worksheet.hpp',
  'source/detail/binary.hpp',
  'source/detail/constants.hpp',
  'source/detail/default_case.hpp',
  'source/detail/unicode.hpp',
  'source/detail/cryptography/aes.hpp',
  'source/detail/cryptography/base64.hpp',
  'source/detail/cryptography/cipher.hpp',
  'source/detail/cryptography/compound_document.hpp',
  'source/detail/cryptography/encryption_info.hpp',
  'source/detail/cryptography/hash.hpp',
  'source/detail/cryptography/sha.hpp',
  'source/detail/cryptography/value_traits.hpp',
  'source/detail/cryptography/xlsx_crypto_consumer.hpp',
  'source/detail/cryptography/xlsx_crypto_producer.hpp',
  'source/detail/external/include_libstudxml.hpp',
  'source/detail/external/include_windows.hpp',
  'source/detail/header_footer/header_footer_code.hpp',
  'source/detail/implementations/cell_impl.hpp',
  'source/detail/implementations/conditional_format_impl.hpp',
  'source/detail/implementations/format_impl.hpp',
  'source/detail/implementations/formatting_record.hpp',
  'source/detail/implementations/hyperlink_impl.hpp',
  'source/detail/implementations/style_impl.hpp',
  'source/detail/implementations/stylesheet.hpp',
  'source/detail/implementations/workbook_impl.hpp',
  'source/detail/implementations/worksheet_impl.hpp',
  'source/detail/number_format/number_formatter.hpp',
  'source/detail/serialization/custom_value_traits.hpp',
  'source/detail/serialization/excel_thumbnail.hpp',
  'source/detail/serialization/open_stream.hpp',
  'source/detail/serialization/vector_streambuf.hpp',
  'source/detail/serialization/xlsx_consumer.hpp',
  'source/detail/serialization/xlsx_producer.hpp',
  'source/detail/serialization/zstream.hpp',
  'third-party/miniz/miniz.h'
)

warnings = [
]

if meson.get_compiler('cpp').get_id() == 'clang'
  cpp_args = []
else
  cpp_args = ['-include', 'limits']
endif

xlnt = shared_library(
  'xlnt',
  xlnt_src,
  build_by_default : true,
  link_args : [],
  link_with : [],
  include_directories : xlnt_inc,
  install : true,
  override_options : ['cpp_std=gnu++14'],
  objects : [
    libstudxml.extract_all_objects()
  ],
  install_dir : 'lib',
  cpp_args : ['-DXLNT_SHARED=1', '-Dxlnt_EXPORTS', '-w'] + cpp_args,
  c_args : ['-DXLNT_SHARED=1', '-Dxlnt_EXPORTS', '-w']
)
xlnt_dep = declare_dependency(
  link_args : [],
  link_with : xlnt,
  compile_args : [],
  include_directories : include_directories('include')
)
